    * removed unnecessary 'if's.
    * removed unnecessary 'else's.
	
2004-02-10 Kristoffer Delforge <delforge@users.sf.net>
    * dc1394_dma_setup_capture uses F7 setup if necessary. Image parameters
      are default to QUERY_FROM_CAMERA, as in dc1394_setup_capture
    * remove duplicate "cams[i].dma_last_buffer = last_buffer_orig;" in
      dc1394_capture.c
    * moved declarations to the beginning of functions.
	
2004-02-16 Damien <ddouxchamps@users.sf.net>
    * fixed an endianess issue. Thanks to Tim Canham for spotting this bug.

2004-02-20 Kristoffer Delforge <delforge@users.sf.net>
    * changed a >= to > in dc1394_capture.c:99
    * changed a >= to = in dc1394_capture.c:112
    * don't use intermediate "char* device" in dc1394_capture.c:247
	
2004-02-20 Damien <ddouxchamps@users.sf.net>
    * applied patch from Johann Schoonees for extra buffering option.
      This breaks compatibility for the capture functions. Examples have
      been updated.
	
2004-04-07 Damien <ddouxchamps@users.sf.net>
    * Attempt to fix the BPP arithmetic (floating point) exception that occurs
      with weird hardware.
	
2004-08-10 Damien <ddouxchamps@users.sf.net>
    * Applied patch from Johann Schoonees to remove extra buffering.
      Yet another compatibility break.
	
2004-09-07 Damien <ddouxchamps@users.sf.net>
    * Applied a patch from David Ergo to fix broken raw capture in libdc0.9.5.

2004-09-13 Damien <ddouxchamps@users.sf.net>
    * Corrected library version
    * Remove 1.31 changes that I committed by mistake
	
2004-09-17 Damien <ddouxchamps@users.sf.net>
    * Added most IIDC 1.31 functions and definitions
	
2004-09-30 Damien <ddouxchamps@users.sf.net>
    * Introduced the IIDC_VERSION_X_XX definitions. Interface version is now 12.

2004-09-30 Damien <ddouxchamps@users.sf.net>
    * Fixed small issue in the IIDC version detection
	
2004-10-28 Damien <ddouxchamps@users.sf.net>
    * Applied a patch from F. Devernay to allow compilation on x86_64.
	